--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,6 @@ psycopg2-binary
 
 # AWS version of ES curl http://$ELASTICSEARCH_SERVICE_HOST:$ELASTICSEARCH_SERVICE_PORT
 elasticsearch<7.14.0
+
+# gdc
+dictionaryutils~=3.4.4
