--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
 addopts = --ignore data_model-bak --ignore setup.py
+
+filterwarnings =
+    ignore:.*datetime.datetime.utcfromtimestamp\(\) is deprecated
+
