--- a/requirements.txt
+++ b/requirements.txt
@@ -27,11 +27,11 @@ beautifulsoup4
 # postgres
 psycopg2-binary
 
-# AWS version of ES curl http://$ELASTICSEARCH_SERVICE_HOST:$ELASTICSEARCH_SERVICE_PORT
-elasticsearch<7.14.0
+# modern plug compatible with elasticsearch
+opensearch-py==2.4.2
+
 
 # gdc
 dictionaryutils
+# TODO - update to 3.1.2
 gen3datamodel<3.0.2
-PyJWT
-
